reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-core__src__events__apply.rs_line_48_col_5.log

*** crates/tracewake-core/src/events/apply.rs:48:5: replace apply_event_stream -> Result<ApplyOutcome, EventApplicationError> with Ok(Default::default())

*** mutation diff:
--- crates/tracewake-core/src/events/apply.rs
+++ replace apply_event_stream -> Result<ApplyOutcome, EventApplicationError> with Ok(Default::default())
@@ -40,40 +40,17 @@
     Agent(ApplyError),
     Epistemic(EpistemicApplyError),
 }
 
 pub fn apply_event_stream(
     context: &mut EventApplicationContext<'_>,
     event: &EventEnvelope,
 ) -> Result<ApplyOutcome, EventApplicationError> {
-    if event.stream != event.event_type.stream() {
-        return Err(EventApplicationError::World(
-            ApplyError::EventKindStreamMismatch,
-        ));
-    }
-
-    match event.stream {
-        EventStream::World => {
-            apply_event(context.physical_state, event).map_err(EventApplicationError::World)
-        }
-        EventStream::Agent => {
-            apply_agent_event(context.agent_state, event).map_err(EventApplicationError::Agent)
-        }
-        EventStream::Epistemic => {
-            if let Some(projection) = context.epistemic_projection.as_deref_mut() {
-                apply_epistemic_event(projection, event).map_err(EventApplicationError::Epistemic)
-            } else {
-                Ok(ApplyOutcome::NonWorldNoOp)
-            }
-        }
-        EventStream::Diagnostic | EventStream::Controller | EventStream::ReplayDebug => {
-            Ok(ApplyOutcome::NonWorldNoOp)
-        }
-    }
+    Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
 }
 
 #[derive(Clone, Debug, PartialEq, Eq)]
 pub enum ApplyError {
     UnsupportedSchemaVersion(String),
     MissingPayload(&'static str),
     BadPayload {
         key: &'static str,


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): the file `crates/tracewake-core/src/events/apply.rs` has changed (1781909957.363925989s, 3s after last build at 1781909954.759925986s)
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
error[E0277]: the trait bound `ApplyOutcome: Default` is not satisfied
  --> crates/tracewake-core/src/events/apply.rs:48:8
   |
48 |     Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
   |        ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `Default` is not implemented for `ApplyOutcome`
  --> crates/tracewake-core/src/events/apply.rs:24:1
   |
24 | pub enum ApplyOutcome {
   | ^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
error: could not compile `tracewake-core` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error[E0277]: the trait bound `apply::ApplyOutcome: Default` is not satisfied
  --> crates/tracewake-core/src/events/apply.rs:48:8
   |
48 |     Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
   |        ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `Default` is not implemented for `apply::ApplyOutcome`
  --> crates/tracewake-core/src/events/apply.rs:24:1
   |
24 | pub enum ApplyOutcome {
   | ^^^^^^^^^^^^^^^^^^^^^

error: could not compile `tracewake-core` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
